Changelog for HLint

    Don't suggest use of Data.Ord.comparing, using `on` is better
    Only suggest elem/notElem on 3 or more items
1.8.15
    Add --cpp-ansi to turn on ANSI compat in cpphs
1.8.14
    #455, GHC 7.2 compatibility
    Add lots of hints from Lennart Augustsson
1.8.13
    #302, add a backup fixity analysis, if the HSE one fails
    Fix x /= y || x /= z ==> x `notElem` [y,z], should be &&
1.8.12
    Allow cpphs-1.12
1.8.11
    #440, suggest removing redundant brackets under do
    #439, don't add redundant brackets under do
1.8.10
    Upgrade to hscolour-1.19
1.8.9
    #436, add a hint about mapMaybe/map
    Upgrade to haskell-src-exts-1.11.1
    Add a --cross flag, to detect hints between multiple modules
    #428, don't suggest using String in an instance head
1.8.8
    #384, suggest collapsing multiple imports/exports
    #374, don't suggest the removal of necessary brackets
    #337, suggest Control.Exception.catch instead of Prelude.catch
    #412, add hints based on Control.Exception
    #378, suggest removing fromInteger/fromIntegral on literals
    #369, add notes to a few hints about possible pitfalls
    #409, fix a few cases where definitions suggested themselves
    #410, Support test* as ignored items in settings files
    #414, add isLit* pattern, and hint about ^^ ==> **
    #420, make the suggestion to use let a warning
    #408, rework the when/unless hints, don't suggest on itself
    Add duplicate detector, for copy/pasted code
    #285, don't show duplicate filepath separators
    If the user enters directories containing no files then say
    Make suggesting curry/uncurry a warning instead of an error
1.8.7
    Relax the transformers dependency, works with 0.0.* and 0.1.*
1.8.6
    Export suggestionSeverity/Severity from the API
    Allow hint imports with "hlint", as well as the existing "hint"
1.8.5
    Update the copyright year to 2011
    #400, support more encoding strings, give useful errors